[gd_scene load_steps=22 format=3 uid="uid://dpja7gv0swviw"]

[ext_resource type="Script" path="res://Scenes/Characters/Player/player.gd" id="1_h2hy7"]
[ext_resource type="Texture2D" uid="uid://mimlsgwrqxga" path="res://Scenes/Characters/Player/Textures/player_wall_grab.png" id="2_48iye"]
[ext_resource type="Texture2D" uid="uid://dcaf1l3kh7x65" path="res://Scenes/Characters/Player/Textures/player_walk_sheet.png" id="3_tgkaj"]
[ext_resource type="AudioStream" uid="uid://c07o1c87qyg4d" path="res://Assets/Sounds/Characters/Player/player_jump_placeholder.wav" id="4_peqww"]
[ext_resource type="Texture2D" uid="uid://dwk28y1lgqpji" path="res://Scenes/Characters/Player/Textures/player_glide.png" id="4_swmes"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_h1mny"]
size = Vector2(6, 7.8)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_1k0d7"]

[sub_resource type="AtlasTexture" id="AtlasTexture_gbgbf"]
atlas = ExtResource("2_48iye")
region = Rect2(0, 0, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_rcfu4"]
atlas = ExtResource("3_tgkaj")
region = Rect2(8, 0, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_ur2j4"]
atlas = ExtResource("3_tgkaj")
region = Rect2(0, 0, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_48hur"]
atlas = ExtResource("4_swmes")
region = Rect2(0, 0, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_n68wr"]
atlas = ExtResource("3_tgkaj")
region = Rect2(0, 0, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_bwn6f"]
atlas = ExtResource("3_tgkaj")
region = Rect2(8, 0, 8, 8)

[sub_resource type="SpriteFrames" id="SpriteFrames_1orys"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_gbgbf")
}],
"loop": false,
"name": &"grab",
"speed": 1.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rcfu4")
}],
"loop": false,
"name": &"idle",
"speed": 1.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ur2j4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_48hur")
}],
"loop": false,
"name": &"jump",
"speed": 0.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_n68wr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bwn6f")
}],
"loop": true,
"name": &"walk",
"speed": 12.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_g2v5e"]
size = Vector2(7, 9)

[sub_resource type="Animation" id="Animation_6cuwn"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_fdy4g"]
resource_name = "jump"
length = 0.1
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0.5, 1.5), Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_2bi33"]
resource_name = "land"
length = 0.1
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1.5, 0.5), Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 2.5), Vector2(0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_2t4qa"]
_data = {
"RESET": SubResource("Animation_6cuwn"),
"jump": SubResource("Animation_fdy4g"),
"land": SubResource("Animation_2bi33")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rnbuk"]
size = Vector2(7, 7.8)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_pjl16"]
size = Vector2(6, 7.8)

[node name="Player" type="CharacterBody2D" groups=["player"]]
process_mode = 1
texture_filter = 1
script = ExtResource("1_h2hy7")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_h1mny")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
z_index = 1
material = SubResource("ShaderMaterial_1k0d7")
sprite_frames = SubResource("SpriteFrames_1orys")
animation = &"jump"

[node name="debug" type="Label" parent="."]
visible = false
offset_left = -28.0
offset_top = 6.0
offset_right = 32.0
offset_bottom = 29.0
text = "velocity"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TilemapDetector" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="TilemapDetector"]
shape = SubResource("RectangleShape2D_g2v5e")

[node name="deform_animations" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_2t4qa")
}

[node name="grab_wall" type="Timer" parent="."]
one_shot = true

[node name="grab_delay" type="Timer" parent="."]

[node name="jump_sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_peqww")
volume_db = -5.0
max_polyphony = 10
bus = &"Sounds"

[node name="WallJumpDetector" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="WallJumpDetector"]
shape = SubResource("RectangleShape2D_rnbuk")

[node name="SmashedDetector" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="SmashedDetector"]
shape = SubResource("RectangleShape2D_pjl16")

[node name="wall_jump_buffer" type="Timer" parent="."]
one_shot = true

[connection signal="body_entered" from="TilemapDetector" to="." method="_on_tilemap_detector_body_entered"]
[connection signal="timeout" from="grab_wall" to="." method="_on_grab_wall_timeout"]
[connection signal="timeout" from="grab_delay" to="." method="_on_grab_delay_timeout"]
[connection signal="body_entered" from="WallJumpDetector" to="." method="_on_wall_jump_detector_body_entered"]
[connection signal="body_exited" from="WallJumpDetector" to="." method="_on_wall_jump_detector_body_exited"]
[connection signal="body_entered" from="SmashedDetector" to="." method="_on_smashed_detector_body_entered"]
[connection signal="timeout" from="wall_jump_buffer" to="." method="_on_wall_jump_buffer_timeout"]
